--- a/carrito.html
+++ b/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CARRITO - RESTAURANTE JAPONÉS</title>
+    <title>NUEVO TÍTULO DESDE LOCAL</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo_claro.png" type="image/jpg"> 
 </head>
