actualizados los enlances en carrito.html

--- a/carrito.html
+++ b/carrito.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="menu">
         <div id="logo"></div>
-        <a href="#">CARTA</a>
+        <a href="articulo.html">CARTA</a>
         <div id="carrito">
             <img src="images/carrito_claro.png">
             <div id="notificacion">0</div>
